# agentic-task-manager

agent/: .env.example  pyproject.toml
agent/app/: main.py  prompts.py  task_database.py  task_manager_agent.py  worflow_test.py  workflow.py
agent/app/nodes/: __init__.py  analysis_node.py  database_node.py  end_node.py  response_node.py  state.py
agent/app/utils/: __init__.py  date_utils.py  json_parser.py  llm_model.py  response_helpers.py  task_database.py  task_matcher.py  workflow_builder.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(task_manager_dash)/: page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/dashboard/: agent-status-indicator.tsx  chat-panel.tsx  dashboard-content.tsx  dashboard-header.tsx  operation-logs.tsx  operation-status.tsx  result-status.tsx  task-examples.tsx  task-item.tsx  task-list.tsx
frontend/components/layouts/: chat-sidebar.tsx  main-layout.tsx
frontend/types/: agent.ts
frontend/utils/: prompts.ts
