[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    { name = "massi-css", email = "massinissa111111@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115,<0.116",
    "copilotkit==0.1.65",
    "uvicorn (>=0.37.0,<0.38.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "google-genai (>=1.38.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

